Pushing user stories

--- a/docs/user-stories.mdx
+++ b/docs/user-stories.mdx
@@ -1,5 +1,7 @@
 # User Stories
 
+---
+
 <div class="col col--12">
   <div class="avatar margin--lg">
     <a
@@ -23,10 +25,49 @@ Together we're building:
 
 - [dora-rs](https://github.com/dora-rs/dora): A fast and simple robotic library for next generation robots.
 
+---
+
 <div class="col col--12">
   <div class="avatar margin--lg">
     <a
       href="https://huggingface.co/"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="avatar__photo-link"
+    >
+      <img
+        class=""
+        src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg"
+        alt="Haixuan Xavier Tao"
+      />
+    </a>
+    <div class="avatar__intro">
+      <div class="avatar__name">
+        <a
+          href="https://huggingface.co"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <h2>Hugging Face</h2>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+We're currently helping HuggingFace building intelligent robot to develop an ecosystem of robots.
+
+Together we're building:
+
+- [dora-aloha](https://github.com/dora-rs/dora-aloha): Imitation learning for 2 armed robots.
+- [dora-idefics2](https://huggingface.co/datasets/dora-rs/dora-idefics2): VLM-powered small robot.
+
+---
+
+<div class="col col--12">
+  <div class="avatar margin--lg">
+    <a
+      href="https://Tsinghua.co/"
       target="_blank"
       rel="noopener noreferrer"
       class="avatar__photo-link"
