Improve about us story

--- a/docs/about-us.mdx
+++ b/docs/about-us.mdx
@@ -29,12 +29,10 @@
   </div>
 </div>
 
-Haixuan Xavier Tao is the founder of 1ms.ai and started building open source software in its weekend.
+Haixuan Xavier Tao is the founder of [1ms.ai](1ms.ai) and started building open source software as a hobby in its weekend, after facing avoidable issues at work.
 
-While building `wonnx`, Futurewei reached out to him to start building `dora-rs` as an independant open source contractor and this is when 1ms.ai started.
+While building `wonnx`, Futurewei reached out to him to start building `dora-rs` a fast and simple robotic library middleware and this is how 1ms.ai started.
 
-`dora-rs` found its product-market-fit after 2 years within the LLM community that wanted to put their model in robots.
-
-This is when 1ms.ai started partnering with Huggingface.
+`dora-rs` found its product-market-fit after 2 years when the LLM community tried to put their model in robots and lead 1ms.ai to partner with Huggingface.
 
 The rest is still to be written.
