Fix broken links

--- a/docs/about-us.mdx
+++ b/docs/about-us.mdx
@@ -29,7 +29,7 @@
   </div>
 </div>
 
-Haixuan Xavier Tao is the founder of [1ms.ai](1ms.ai) and started building open source software as a hobby in its weekend, after facing avoidable issues at work.
+Haixuan Xavier Tao is the founder of [1ms.ai](/) and started building open source software as a hobby in its weekend, after facing avoidable issues at work.
 
 While building `wonnx`, Futurewei reached out to him to start building `dora-rs` a fast and simple robotic library middleware and this is how 1ms.ai started.
 
